finishes off the beenfits controllers and adds useful links to the README